reduce size of JRE generated by jlink